Java 17 friendly code change.